==> mtguerreiro/mqtt_manager/demo/esp32/tasks/task_blink.c <==

//=============================================================================
/*-------------------------------- Includes ---------------------------------*/
//=============================================================================
#include "task_blink.h"

/* Kernel */
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"

/* Device and drivers */
#include "driver/gpio.h"

#define BLINK_GPIO 2

//=============================================================================

//=============================================================================
/*--------------------------------- Defines ---------------------------------*/
//=============================================================================
typedef struct{

	/* Blink period */
	uint32_t period;

} blinkControl_t;
//=============================================================================

//=============================================================================
/*--------------------------------- Globals ---------------------------------*/
//=============================================================================
/* Task control structure */
blinkControl_t xblinkControl;
//=============================================================================

//=============================================================================
/*-------------------------------- Prototypes -------------------------------*/
//=============================================================================
static void taskBlinkInitialize(void);
static int32_t taskBlinkPeriodUpdate(void *in, uint32_t insize, void **out, uint32_t maxoutsize);
static void taskBlinkCheckWifi(void);
static void taskBlinkToggle(void);
//=============================================================================

//=============================================================================
/*---------------------------------- Task -----------------------------------*/
//=============================================================================
//-----------------------------------------------------------------------------
void taskBlink(void *param){

    (void)param;

    taskBlinkInitialize();

    while(1){
        //taskBlinkCheckWifi();
    	taskBlinkToggle();
        vTaskDelay(xblinkControl.period);
    }
}
//-----------------------------------------------------------------------------
//=============================================================================

//=============================================================================
/*---------------------------- Static functions -----------------------------*/
//=============================================================================
//-----------------------------------------------------------------------------
static void taskBlinkInitialize(void){

    gpio_reset_pin(BLINK_GPIO);
    gpio_set_direction(BLINK_GPIO, GPIO_MODE_OUTPUT);

	/* Sets default blinking period */
	xblinkControl.period = TASK_BLINK_CONFIG_DEFAULT_PERIOD_MS / portTICK_PERIOD_MS;
}
//-----------------------------------------------------------------------------
static int32_t taskBlinkPeriodUpdate(void *in, uint32_t insize, void **out, uint32_t maxoutsize){

	uint32_t period;

	period = *((uint32_t *)(in));

	xblinkControl.period = period / portTICK_PERIOD_MS;

    return 0;
}
//-----------------------------------------------------------------------------
static void taskBlinkCheckWifi(void){

    int status = 0;

    //status = cyw43_wifi_link_status(&cyw43_state, CYW43_ITF_STA);

    if( status != 1 ) xblinkControl.period = 250 / portTICK_PERIOD_MS;
    else xblinkControl.period = 1000 / portTICK_PERIOD_MS;
}
//-----------------------------------------------------------------------------
static void taskBlinkToggle(void){

    static bool state = 0;
    
    gpio_set_level(BLINK_GPIO, state);
    state = !state;
}
//-----------------------------------------------------------------------------
//=============================================================================
