==> mtguerreiro/mqtt_manager/demo/picow/tasks/task_blink.c <==

//=============================================================================
/*-------------------------------- Includes ---------------------------------*/
//=============================================================================
#include "task_blink.h"

/* Kernel */
#include "FreeRTOS.h"
#include "task.h"

/* Device and drivers */
#include "pico/cyw43_arch.h"
#include "pico/stdlib.h"

#include "task_wifi_init.h"
//=============================================================================

//=============================================================================
/*--------------------------------- Defines ---------------------------------*/
//=============================================================================
#define TASK_BLINK_LED   CYW43_WL_GPIO_LED_PIN

typedef struct{

    /* Blink period */
    uint32_t period;

} blinkControl_t;
//=============================================================================

//=============================================================================
/*--------------------------------- Globals ---------------------------------*/
//=============================================================================
/* Task control structure */
blinkControl_t xblinkControl;
//=============================================================================

//=============================================================================
/*-------------------------------- Prototypes -------------------------------*/
//=============================================================================
static void taskBlinkInitialize(void);
static void taskBlinkCheckWifi(void);
static void taskBlinkToggle(void);
//=============================================================================

//=============================================================================
/*---------------------------------- Task -----------------------------------*/
//=============================================================================
//-----------------------------------------------------------------------------
void taskBlink(void *param){

    (void) param;

    taskBlinkInitialize();

    while(1){
        taskBlinkCheckWifi();
        taskBlinkToggle();
        vTaskDelay(xblinkControl.period);
    }
}
//-----------------------------------------------------------------------------
//=============================================================================

//=============================================================================
/*---------------------------- Static functions -----------------------------*/
//=============================================================================
//-----------------------------------------------------------------------------
static void taskBlinkInitialize(void){

    /* Sets default blinking period */
    xblinkControl.period = TASK_BLINK_CONFIG_DEFAULT_PERIOD_MS / portTICK_PERIOD_MS;
}
//-----------------------------------------------------------------------------
static void taskBlinkCheckWifi(void){

    int status;

    status = cyw43_wifi_link_status(&cyw43_state, CYW43_ITF_STA);

    if( status != 1 ) xblinkControl.period = 250 / portTICK_PERIOD_MS;
    else xblinkControl.period = 1000 / portTICK_PERIOD_MS;
}
//-----------------------------------------------------------------------------
static void taskBlinkToggle(void){

    static bool state = 0;

    cyw43_arch_gpio_put(TASK_BLINK_LED, state);
    state = !state;
}
//-----------------------------------------------------------------------------
//=============================================================================
